data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1481.wast
;; 2. Implement a function with multiple `call` instructions, one of which leads to a function that executes `unreachable`. Ensure the sequence traps correctly at the point of the `unreachable` execution.

(assert_invalid
  (module
    (func $f1
      (block
        (call $f2)
        (call $f3)
      )
    )
    (func $f2
      (unreachable)
    )
    (func $f3
      (nop)
    )
  )
  "type mismatch"
)